# NESO-workspace

Electrostatic2D3V/: 2D_input.xml  plot_energy.py  plot_spiral.py  structured_cartesian_square_10x10.xml
Electrostatic2D3V/2/: 2D_input.xml
Electrostatic2D3V/6/: 2D_input.xml
Electrostatic2D3V/9/: 2D_input_2200.xml
Electrostatic2D3V/FD1/: README.md  conditions.xml  mesh_gen.sh  periodic_structured_cartesian_square.geo
Electrostatic2D3V/e2d3v_12_22_scaling/: plot_strong_scaling.py
Electrostatic2D3V/long_time_two_stream/: extract_last_evaluation.py  plot_phi_fft.py  two_stream_conditions.xml
Electrostatic2D3V/square1/: README.md  conditions.xml  square_10x10.xml
Electrostatic2D3V/two_stream/: README.md  plot_energy.py  two_stream_conditions.xml
SimpleSOLNeutrals/conservation_workspace/: 2D_mesh_aligned.xml  config.xml  mass_recording.csv  plot_mass.py
bary/: is_linear.py
barycentric_plot_linear/: main_quad.py
code_gen/: CMakeLists.txt  generate.py  main.cpp
deformed-mappings/: Makefile  README.md  generate_linear_source.py  hex.py  hexahedron.py  newton_generation.py  prism.py  pyramid.py  quad.py  quadrilateral.py  test_all.py  tetrahedron.py
duplicate-domain-decomposition/: README.md  main.cpp
events_plotting/: plot_events.py  plot_regions.py
flops_evaluation/: hex_cube_0.3.xml  hex_cube_conditions.xml  plot_bench_evaluation.py
generated_basis_evaluation/: jacobi.py
global-move/: CMakeLists.txt  main.cpp
h3lapd-workspace/: cuboid.xml  hw.xml
hybrid-move/: CMakeLists.txt  main.cpp
io-test/: CMakeLists.txt  main.cpp
nektar-move/: main.cpp  mixed_square.geo  mixed_square.msh  mixed_square_small.msh  mixed_square_small.xml  unit_square_0_1.xml
output_counter/: main.cpp
performance_workshop/: conditions.opt  conditions.xml  conditions_128M.opt  conditions_128M.xml  conditions_16M.opt  conditions_16M.xml  conditions_64M.xml  launch_maqao  maqao.sbatch  plot_strong_scaling.py  square_16x16.xml  square_32x32.xml  test.sbatch  vtune.sbatch
performance_workshop/128M-3D-H0-32x32/: test.sbatch
performance_workshop/32M-3D-H0-32x32/: test.sbatch
performance_workshop/32M-3D-HN-32x32/: test.sbatch
performance_workshop/64M-3D-H0-32x32/: test.sbatch
performance_workshop/8M-3D-H1-32x32/: test.sbatch
performance_workshop/8M-3D-HN-32x32/: test.sbatch
performance_workshop/conditions_128M_xml/: P0000000.xml  P0000001.xml  P0000002.xml  P0000003.xml  P0000004.xml  P0000005.xml  P0000006.xml  P0000007.xml  P0000008.xml  P0000009.xml  P0000010.xml  P0000011.xml  P0000012.xml  P0000013.xml  P0000014.xml  P0000015.xml  P0000016.xml  P0000017.xml  P0000018.xml  P0000019.xml  P0000020.xml  P0000021.xml  P0000022.xml  P0000023.xml  P0000024.xml  P0000025.xml  P0000026.xml  P0000027.xml  P0000028.xml  P0000029.xml  P0000030.xml  P0000031.xml  P0000032.xml  P0000033.xml  P0000034.xml  P0000035.xml  P0000036.xml  P0000037.xml  P0000038.xml  P0000039.xml  (+472 more)
performance_workshop/conditions_16M_xml/: P0000000.xml  P0000001.xml  P0000002.xml  P0000003.xml  P0000004.xml  P0000005.xml  P0000006.xml  P0000007.xml  P0000008.xml  P0000009.xml  P0000010.xml  P0000011.xml  P0000012.xml  P0000013.xml  P0000014.xml  P0000015.xml  P0000016.xml  P0000017.xml  P0000018.xml  P0000019.xml  P0000020.xml  P0000021.xml  P0000022.xml  P0000023.xml  P0000024.xml  P0000025.xml  P0000026.xml  P0000027.xml  P0000028.xml  P0000029.xml  P0000030.xml  P0000031.xml  P0000032.xml  P0000033.xml  P0000034.xml  P0000035.xml  P0000036.xml  P0000037.xml  P0000038.xml  P0000039.xml  (+472 more)
performance_workshop/conditions_64M_xml/: P0000000.xml  P0000001.xml  P0000002.xml  P0000003.xml  P0000004.xml  P0000005.xml  P0000006.xml  P0000007.xml  P0000008.xml  P0000009.xml  P0000010.xml  P0000011.xml  P0000012.xml  P0000013.xml  P0000014.xml  P0000015.xml  P0000016.xml  P0000017.xml  P0000018.xml  P0000019.xml  P0000020.xml  P0000021.xml  P0000022.xml  P0000023.xml  P0000024.xml  P0000025.xml  P0000026.xml  P0000027.xml  P0000028.xml  P0000029.xml  P0000030.xml  P0000031.xml  P0000032.xml  P0000033.xml  P0000034.xml  P0000035.xml  P0000036.xml  P0000037.xml  P0000038.xml  P0000039.xml  (+472 more)
performance_workshop/conditions_xml/: P0000000.xml  P0000001.xml  P0000002.xml  P0000003.xml  P0000004.xml  P0000005.xml  P0000006.xml  P0000007.xml  P0000008.xml  P0000009.xml  P0000010.xml  P0000011.xml  P0000012.xml  P0000013.xml  P0000014.xml  P0000015.xml  P0000016.xml  P0000017.xml  P0000018.xml  P0000019.xml  P0000020.xml  P0000021.xml  P0000022.xml  P0000023.xml  P0000024.xml  P0000025.xml  P0000026.xml  P0000027.xml  P0000028.xml  P0000029.xml  P0000030.xml  P0000031.xml  P0000032.xml  P0000033.xml  P0000034.xml  P0000035.xml  P0000036.xml  P0000037.xml  P0000038.xml  P0000039.xml  (+472 more)
performance_workshop/toplot/16M-3D-H0-32x32/: plot.json  test.sbatch
performance_workshop/toplot/32M-3D-H0-32x32/: plot.json
performance_workshop/toplot/64M-3D-H0-32x32/: plot.json
performance_workshop/toplot/8M-3D-H0-32x32/: plot.json  test.sbatch
periodic_unit_square/: mesh_gen.sh  periodic_structured_cartesian_square.geo
projection-evaluation/: CMakeLists.txt  exponential_density.hpp  function_evaluation.hpp  function_projection.hpp  function_vtk_output.hpp  main.cpp
random-unit-square/: main.py  main_striped.py  structured_cartesian_square.geo
reference_all_types_cube/: bar.py  generate_gmsh_cube.py  tet_pyr_face.py
reference_all_types_square/: make_higher_order.py
reference_cube/: mesh_gen.sh  reference_cube.geo
reference_square/: mesh_gen.sh
unit_volume_rectangle/: periodic_structured_cartesian_rectangle.geo
workshop_2024_resources/: plot_archer2_example.py
